# cereal

./: Cargo.toml  README.md
plugin/: Cargo.toml  README.md
plugin/src/: plugin.rs
src/: lib.rs
tests/: test.rs
