[package]
name = "cereal"
version = "0.1.0"
authors = ["HeroesGrave <heroesgrave@gmail.com>"]
description = "A simple data serialisation library"
repository = "https://github.com/HeroesGrave/cereal"
homepage = "https://github.com/HeroesGrave/cereal"
license = "MIT"
readme = "README.md"
keywords = [
    "serialization"
    "serialisation" # The correct spelling
]

[dev-dependencies.cereal_macros]
path = "./plugin/"

[features]
nightly = [] # More fun
