[package]
name = "cereal"
version = "0.2.1"
authors = ["HeroesGrave <heroesgrave@gmail.com>"]
description = "A simple data serialisation library"
repository = "https://github.com/HeroesGrave/cereal"
homepage = "https://github.com/HeroesGrave/cereal"
license = "MIT"
readme = "README.md"
keywords = [
    "serialization",
    "serialisation", # The correct spelling
]

[dev-dependencies.cereal_macros]
version = "0.2.0"
path = "./plugin/"

[features]
nightly = [] # Needed for tests.
